# CrackStack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  Dockerfile.dev  alembic.ini  app.json  pyproject.toml  start.sh  start_uvicorn.ps1
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 2afcaf75f8d2_add_is_superuser_to_users.py  5b278f824cae_add_report_computed_fields.py  9bea56ea4690_add_is_completed_to_roadmap_tasks.py  a99f551429f1_add_ai_providers_table.py  e8302869a07d_initial.py  f7c3b2a1d4e5_add_roadmap_task_fields_and_week_status.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  ai.py  config.py  database.py  exceptions.py  logging.py  rate_limit.py  redis.py  security.py  seed_providers.py
backend/app/models/: __init__.py  ai_provider.py  audit_log.py  chat.py  daily_task.py  email_verification.py  goal.py  notification.py  oauth_account.py  password_reset.py  progress.py  refresh_token.py  report.py  roadmap.py  user.py  user_preference.py
backend/app/repositories/: __init__.py  ai_provider.py  audit.py  base.py  chat.py  goal.py  notification.py  preference.py  progress.py  report.py  roadmap.py  task.py  token.py  user.py
backend/app/schemas/: admin.py  ai_provider.py  auth.py  chat.py  common.py  daily.py  goal.py  notification.py  onboarding.py  report.py  roadmap.py  task.py  user.py
backend/app/services/: __init__.py  (+14 more)
backend/requirements/: base.txt  dev.txt  prod.txt
(+97 files in other folders)
