[project]
name = "prepos-backend"
version = "0.1.0"
description = "PrepOS API backend"
requires-python = ">=3.12"
dependencies = ["openai>=1.0.0"]

[project.scripts]
prepos-api = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
